libs/@local/hashql/ast/tests/ui/lowering/special-form-expander/newtype-collect-all-errors.jsonc
//@ run: fail
//@ description: We should collect all errors when lowering newtype/3, and not only report the first one.
["::kernel::special_form::newtype", "::x", { "#literal": 1 }, "x"]
//~^ ERROR Replace this qualified path with a simple identifier
//~| ERROR Replace this literal with a type name
